--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,6 +11,8 @@ body{
   margin-left: auto;
   margin-right: auto;
   width: 90%;
+  margin-top: 20px;
+  text-align: center;
 }
 
 li{
@@ -22,12 +24,7 @@ li{
 
 }
 
-.logo{
-  margin-bottom: 20px;
-  margin-top: 10px;
-  width: 90%;
-  display: block;
-}
+
 
 a:link{
   color: rgb(50, 50, 50);
@@ -49,9 +46,10 @@ a:active{
 .content{
   font-family: Calibri, Arial, sans-serif;
   font-size: 14pt;
-  margin-left:400px;
   margin-top: 50px;
-  width: 500px;
+  width: 450px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h2{
