--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -71,18 +71,45 @@ figcaption{
 }
 
 figure{
-  margin-left: inherit;
-  margin-right: inherit;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .maerchen1{
   margin-top: 40px;
 }
 
-.einzelbild{
+.einzelbild1{
   display: inline-block;
-  padding: 10px;
+  padding-right: 10px;
   width: 215px;
-  padding-top: 0;
-  padding-bottom: 0;
+}
+
+.einzelbild2{
+  display: inline-block;
+  padding-left: 10px;
+  width: 215px;
+}
+
+hr{
+  width: 450;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  color: rgb(50, 50, 50);
+}
+
+.textil{
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.portrait{
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.tanzprojekt{
+  margin-top: 40px;
 }
