--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,7 +7,7 @@ body{
   color: rgb(50, 50, 50);
 }
 
-.header{
+header{
   margin-left: auto;
   margin-right: auto;
   width: 90%;
@@ -20,9 +20,10 @@ body{
   margin-right: auto;
   width: 1200px;
 }
-.fixedsticky{
+
+nav.fixedsticky{
   position: sticky;
-  top: 0px;
+  top: 0;
 
 }
 li{
